# TDMSpp

./: .gitignore  CMakeCache.txt  CMakeLists.txt  nptest.py  tdmspp-osem-config-version.cmake.in  tdmspp-osem-config.cmake
src/: CMakeLists.txt  data_extraction.cpp  data_extraction.hpp  data_type.cpp  data_type.h  datachunk.cpp  datachunk.h  exports.h  log.cpp  log.hpp  tdms.hpp  tdms_channel.h  tdms_exceptions.h  tdms_exports.h  tdms_file.cpp  tdms_file.hpp  tdms_impl.hpp  tdms_listener.h  tdms_segment.cpp  tdms_segment.hpp  tdmspp.h
tests/: CMakeLists.txt  optionparser.h  tdmsppinfo.cpp
